add CDN and update css

--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,14 @@ section {
     width: 23.23176%; }
     section aside:last-child {
       margin-right: 0; }
+    @media screen and (max-width: 768px) {
+      section aside {
+        float: left;
+        display: block;
+        margin-right: 3.57866%;
+        width: 100%; }
+        section aside:last-child {
+          margin-right: 0; } }
   section article {
     float: left;
     display: block;
@@ -43,6 +51,14 @@ section {
     width: 74.41059%; }
     section article:last-child {
       margin-right: 0; }
+    @media screen and (max-width: 768px) {
+      section article {
+        float: left;
+        display: block;
+        margin-right: 3.57866%;
+        width: 48.21067%; }
+        section article:last-child {
+          margin-right: 0; } }
 
 h1 {
   color: #ffffff;
