--- a/style/style.scss
+++ b/style/style.scss
@@ -19,9 +19,15 @@ section {
   @include outer-container;
   aside {
     @include span-columns(3);
+    @include media($tablet) {
+      @include span-columns(8);
+    }
   }
   article {
     @include span-columns(9);
+    @include media($tablet) {
+      @include span-columns(8);
+    }
   }
 }
 
